        PR libstdc++/10606 gcc/cp/         * except.c (do_get_exception_ptr): New.         (expand_start_catch_block): Use it. libstdc++/         * config/linker-map.gnu (CXXABI_1.3.1): Add __cxa_get_exception_ptr.         * libsupc++/eh_alloc.cc (__cxa_allocate_exception): Increment         uncaughtExceptions here instead of ...         * libsupc++/eh_throw.cc (__cxa_throw) ... here.         (__cxa_rethrow): Increment uncaughtExceptions here instead of ...         * libsupc++/eh_catch.cc (__cxa_end_catch): ... here.         (__cxa_get_exception_ptr): New.         * libsupc++/unwind-cxx.h (__cxa_get_exception_ptr): Declare.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@95262 138bc75d-0d04-0410-961f-82ee72b054a4